// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Component Should to render the component correctly with custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle Component Should to show the  component with the product's name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Without Image
  </span>
</div>
`;
